--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.10"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 pytest = "^7.4.0"
+codeclimate-test-reporter = "^0.2.3"
 
 [build-system]
 requires = ["poetry-core"]
