--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Run linter and pytest
         run: |
           make lint
-      - name: Test & publish code coverage
+      - name: code coverage
         uses: paambaati/codeclimate-action@v3.2.0
         if: github.ref_name == 'main'
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_REPORTER_ID }}
+          CODECLIMATE_REPORTER_ID: ${{ secrets.CODECLIMATE_REPORTER_ID }}
         with:
           coverageCommand: make test
           debug: true
