--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,11 +28,12 @@ jobs:
       - name: Run linter and pytest
         run: |
           make lint
-      - name: code coverage
+          make test
+      - name: Code coverage
         uses: paambaati/codeclimate-action@v3.2.0
         if: github.ref_name == 'main'
         env:
           CODECLIMATE_REPORTER_ID: ${{ secrets.CODECLIMATE_REPORTER_ID }}
         with:
-          coverageCommand: make test
+          coverageCommand: make test-coverage
           debug: true
