--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.10"
 flake8 = "^6.0.0"
 pytest = "^7.4.0"
 codeclimate-test-reporter = "^0.2.3"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
