--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+PyYAML = "^6.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
@@ -25,3 +26,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 cmd_gendiff = "difference_calculator.cmd_gendiff:main"
 gendiff = "difference_calculator.gendiff.generate_diff:main"
+parser = "difference_calculator.parser.parser:main"
