--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,4 @@ build-backend = "poetry.core.masonry.api"
 cmd_gendiff = "difference_calculator.cmd_gendiff:cmd_gendiff"
 gendiff = "difference_calculator.gendiff.generate_diff:main"
 parser = "difference_calculator.parser.parser:main"
-entry = "difference_calculator.scripts.entry:main"
+entry = "difference_calculator.gendiff.gendiff:main"
