--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["NevermoreKatana <crymorebch@gmail.com>"]
 license = "Proprietary"
 readme = "README.md"
 packages = [
-  { include = "difference_calculator" },
+  { include = "gendiff" },
 ]
 
 [tool.poetry.dependencies]
@@ -24,7 +24,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-cmd_gendiff = "difference_calculator.cmd_gendiff:cmd_gendiff"
-gendiff = "difference_calculator.gendiff.generate_diff:main"
-parser = "difference_calculator.parser.parser:main"
-entry = "difference_calculator.gendiff.gendiff:main"
+cmd_gendiff = "gendiff.parser:cmd_gendiff"
+gendiff = "gendiff.gendiff.generate_diff:main"
+parser = "gendiff.parser.parser:main"
+entry = "gendiff.gendiff.gendiff:main"
