--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,4 @@ build-backend = "poetry.core.masonry.api"
 cmd_gendiff = "gendiff.parser:cmd_gendiff"
 parser = "gendiff.parser.parser:main"
 entry = "gendiff.gendiff.gendiff:main"
+t = "gendiff.renderers.json:main"
