--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,5 +25,5 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 cmd_gendiff = "gendiff.parser:cmd_gendiff"
 parser = "gendiff.parser.parser:main"
-entry = "gendiff.gendiff.gendiff:main"
+entry = "gendiff.gendiff:main"
 t = "gendiff.renderers.json:main"
