--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ build-backend = "poetry.core.masonry.api"
 gendiff = "gendiff.gendiff:exec_app"
 parser = "gendiff.parser.parser:main"
 entry = "gendiff.gendiff:main"
-t = "gendiff.renderers.plain:main"
+t = "gendiff.renderers.stylish:main"
