--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-gendiff = "gendiff.scripts.entry_point:exec_app"
+gendiff = "gendiff.scripts.gendiff:main"
